feat: Update new cover

--- a/data/covers.yml
+++ b/data/covers.yml
@@ -1,1 +1,11 @@
+---
+title: 东湖先生
+date: 2025-7-10
+tags: [文章, 分类]
+cover: https://cdn.jsdelivr.net/gh/cyankiler/my-blog-assets@main/covers/wallhaven-8o23gk.webp
+---
+
+这里是文章的正文内容...
+
+
 - https://cdn.jsdelivr.net/gh/cyankiler/my-blog-assets@main/covers/wallhaven-8o23gk.webp
