--- a/data/friends.yml
+++ b/data/friends.yml
@@ -1,4 +1,4 @@
-- name: D-Sketon
+- name: 鳩兹先生
   url: https://d-sketon.github.io/
   desc: Hexo 建站
   image: https://d-sketon.github.io/avatar/avatar.webp
