--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -26,7 +26,7 @@ monthFormat: "2006-01"
 dateFormat: "2006-01-02"
 timeFormat: "2006-01-02 15:04:05"
 
-author: D-Sketon
+author: 鸠兹先生
 email: xxx@example.com
 description: "少女祈祷中..."
 subtitle: "少女祈祷中..."
@@ -587,7 +587,7 @@ player:
     options:
       # audio: []  # 这一行保持不动或删除，因为 Meting 会自动填充歌曲
       fixed: true              # 开启吸底模式，让播放器固定在页面底部
-      autoplay: false          # 是否自动播放，建议 false，避免打扰访客
+      autoplay: true          # 是否自动播放，建议 false，避免打扰访客
       loop: 'all'              # 播放循环模式: 'all' (列表循环), 'one' (单曲循环), 'none' (不循环)
       order: 'list'            # 播放顺序: 'list' (列表顺序), 'random' (随机播放)
       preload: 'auto'          # 预加载: 'auto', 'metadata', 'none'
