--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -26,10 +26,10 @@ monthFormat: "2006-01"
 dateFormat: "2006-01-02"
 timeFormat: "2006-01-02 15:04:05"
 
-author: 鸠兹先生
+author: 东湖先生
 email: xxx@example.com
-description: "少女祈祷中..."
-subtitle: "少女祈祷中..."
+description: "少女祈祷中"
+subtitle: "少女祈祷中"
 
 banner: "images/banner.webp"
 # You can also write it in the form of the following url
