--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -592,7 +592,7 @@ player:
       order: 'list'            # 播放顺序: 'list' (列表顺序), 'random' (随机播放)
       preload: 'auto'          # 预加载: 'auto', 'metadata', 'none'
       volume: 0.7              # 默认音量 (0 到 1 之间)
-      mutex: true              # 互斥锁，防止多个播放器同时播放
+      mutex: false              # 互斥锁，防止多个播放器同时播放
       listFolded: true        # 默认是否折叠播放列表，建议 false，让访客能看到歌单
       lrcType: 3               # 歌词格式类型，3 表示使用 Meting 的歌词
   meting:
