--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -599,7 +599,7 @@ player:
     # https://github.com/metowolf/MetingJS
     # if you want to use meting, please enable aplayer first
     enable: true
-    meting_api: # custom api, 如果不使用自定义API，保持为空即可
+    meting_api: 'https://api.injahow.cn/meting/?server=:server&type=:type&id=:id&auth=:auth&r=:r'
     options:
       id: "7232039344"   # <-- 这里是您的歌单ID，确保是正确的
       server: "netease"   # <-- 您的音乐平台
