--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -530,9 +530,9 @@ share:
 
 # show categories card on home page
 home_categories:
-  enable: false
+  enable: true
   content:
-    - categories: # string (single-layer category) or array (multi-layer category)
+    - categories: "技术教程"
       cover: # empty means random cover
     - categories:
       cover:
@@ -602,6 +602,14 @@ player:
       id: "7232039344"  
       server: "netease"
       type: "playlist"
+      auto: true
+      autoplay: true
+      loop: 'all'
+      mutex: false
+      order: 'list'
+      preload: 'auto'
+
+
 
 
 
