--- a/hugo.toml
+++ b/hugo.toml
@@ -31,7 +31,23 @@ server = "netease"
 type = "playlist"
 id = "7232039344"
 
+
+
+[markup.goldmark.extensions.passthrough]
+enable = true
+delimiters.block = [["\\[", "\\]"], ["$$", "$$"]]
+delimiters.inline = [["\\(", "\\)"], ["$", "$"]]
+
 # 代码块的正常显示
 [markup.highlight]
 guessSyntax = true
 noClasses = false
+
+[outputs]
+home = ["Algolia", "HTML", "RSS"]
+
+[outputFormats.Algolia]
+baseName = "algolia"
+isPlainText = true
+mediaType = "application/json"
+notAlternative = true
