--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -26,7 +26,7 @@ monthFormat: "2006-01"
 dateFormat: "2006-01-02"
 timeFormat: "2006-01-02 15:04:05"
 
-author: 鸠兹先生
+author: 东湖居士
 email: xxx@example.com
 description: 
 subtitle: 
